# adad_testing_python

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  apis.json  justfile  pycashe_deletio_copy_and_paste_in_terminla  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
src/api/: api_testpoints.py
src/configuration/: config.yaml
src/configuration/file_injection/: file_injection.py  fz_staging.sh  inject_try.py
src/configuration/utils/: utils.py
src/navigation/: navigation_by_link.py
src/navigation/accounting/: accounting_navigation.py
src/navigation/alerts/: alerts_navigation.py
src/navigation/audit_track/: audit_track_navigation.py
src/navigation/business_rules/: business_rules_navigation.py
src/navigation/cash_forecast/: cash_forecast_navigation.py
src/navigation/dashboard/: dashboard_navigation.py
src/navigation/data_ingestion/: data_ingestion_navigation.py
src/navigation/master_data/: master_data_navigation.py
src/navigation/reconciliation/: reconciliation_navigation.py
src/navigation/settlements_disputes/: settlements_disputes_navigation.py
src/testcase/: testcase_main.py
src/testcase/testcases_filters/: testcase_audit_track_sale.py
src/testcase/testcases_smoke/: test_trigger_the_advanced_matching.py  test_upload_sales_files.py  (+3 more)
src/testpoint/: testpoint_main.py
src/tests/: __init__.py  conftest.py  test_unitaire_testpoints.py
src/ui/: dashboard_ui.py
trying_injection/: Sale.csv  boto.py  inject.py  run_sftp_session_staging.py
(+41 files in other folders)
